--- a/rebar.config
+++ b/rebar.config
@@ -8,6 +8,7 @@
   {cowboy, "", {git, "https://github.com/ninenines/cowboy", {tag, "1.0.1"}}},
   {ranch, "", {git, "https://github.com/ninenines/ranch", {tag, "1.1.0" }}},
   {msgpack, "", {git, "https://github.com/msgpack/msgpack-erlang", {tag, "0.3.3"}}},
-  {pbkdf2, "", {git, "https://github.com/whitelynx/erlang-pbkdf2", {branch, "master"}}}
+  {pbkdf2, "", {git, "https://github.com/whitelynx/erlang-pbkdf2", {branch, "master"}}},
+  {lager, ".*", {git, "https://github.com/basho/lager.git", "3.2.0"}}
  ]
 }.
